--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html {
 }
 
 header {
-  background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
+  background-color: #FFA2B9;
   padding: 15px 0;
   width: 100%;
   position: fixed;
@@ -254,7 +254,7 @@ strong {
 }
 
 .about {
-  background-color: white;
+  background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
 }
 
 .about-content-container {
@@ -514,7 +514,7 @@ strong {
 }
 
 footer {
-  background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
+  background-color: #FFA2B9;
   color: white;
   padding: 20px 0;
   text-align: center;
