--- a/index.css
+++ b/index.css
@@ -460,6 +460,7 @@ strong {
             opacity: 0;
             backface-visibility: hidden;
             transition: opacity 0.5s ease;
+            overflow: hidden;
         }
 
         .polaroid:hover {
