--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ html {
   padding: 0;
   font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
+  background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
 }
 
 header {
@@ -253,10 +254,6 @@ strong {
   align-items: center;
 }
 
-.about {
-  background: linear-gradient(120deg, #FFA2B9, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
-}
-
 .about-content-container {
     display: flex;
     align-items: center;
@@ -323,7 +320,6 @@ strong {
 
 /*explore*/
   .explore {
-    background: linear-gradient(120deg, #FFA2B9, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
     font-family: 'Courier New', monospace;
     height: 180vh;
   display: flex;
@@ -336,7 +332,7 @@ strong {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px; /* Space between rows */
+    gap: 50px; 
     max-width: 900px;
     margin: auto;
     position: relative;
@@ -346,7 +342,7 @@ strong {
 .row {
     display: flex;
     justify-content: center;
-    gap: 30px; /* Space between polaroids */
+    gap: 30px; 
     position: relative;
     width: 100%;
 }
@@ -403,7 +399,7 @@ strong {
     position: relative;
     top: -25px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-70%);
 }
 
 /* Image inside polaroid */
@@ -441,7 +437,10 @@ strong {
        
         #borderimg1 {
   border: 5px solid transparent;
-  padding: 10px;
+  white-space: nowrap;
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   border-image: url(/images/border) 30 round;
 }
 
@@ -460,7 +459,6 @@ strong {
             opacity: 0;
             backface-visibility: hidden;
             transition: opacity 0.5s ease;
-            overflow: hidden;
         }
 
         .polaroid:hover {
